# Wiper

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audit_logger.rs  cert.rs  certificate_generator.rs  config.rs  crypto.rs  device.rs  device_manager.rs  main.rs  wipe.rs  wipe_engine.rs
src/components/: AuditLogs.vue  CertificateView.vue  DeviceSelector.vue  WipeProgress.vue
verification-portal/: package.json
