[package]
name = "secure-data-wipe"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
hex = "0.4"
printpdf = "0.6"
qrcode = "0.14"
image = "0.24"
base64 = "0.21"
rand = "0.8"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "handleapi", "fileapi", "ioapiset"] }
wmi = "0.13"

[target.'cfg(unix)'.dependencies]
nix = "0.27"
libc = "0.2"
