[package]
name = "securewipe"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
ed25519-dalek = { version = "1", features = ["rand"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.6"
anyhow = "1.0"
hostname = "0.3"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }





